# nia

./: .gitignore  LICENSE  README.md  build_resume.py  pyproject.toml
.github/workflows/: test.yml
docs/: architecture.md  manifest.md  worker-authoring.md
docs/govcon/: cold-email-template.md  formal-methods-brief.md  nsf-project-pitch.md  runtime-tour.md  status.md  team-narrative.md
docs/workers/: chat-via-imessage.md
nia/: __init__.py
nia/cli/: __main__.py
nia/cli/commands/: __init__.py  inspect.py  install.py  logs.py  run.py  status.py  worker.py
nia/runtime/: condition.py  executor.py  manifest.py  permissions.py  registry.py  state.py  types.py
nia/workers/_builtins/: _imap.py  _notion_client.py  claude.py  debug.py  email.py  imessage.py  notion.py  render.py
nia/workers/hello-world/: worker.yaml
nia/workers/inbox-triage/: worker.yaml
nia/workers/morning-ops/: worker.yaml
nia/workers/notion-sync/: worker.yaml
tests/: conftest.py  test_claude_builtin.py  test_permissions.py  test_worker_install_enable.py
